@@ -2,6 +2,7 @@ Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
   - Documentation fixes (gh#9)
+  - [internal] do not import everything from POSIX (gh#9)
 
 0.21      2017-08-25 08:02:04 -0400
   - Allow tight fields when using curly braces (jjatria++)
